chore: add login (uuid added)

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,8 @@
       Confirma: <input type="password" name="confirma" /><br />
       <input type="submit" value="Enviar" />
     </form>
+    <br>
+    <a href="/login"><span>Entrar</span></a>
 
     <pre><%=JSON.stringify(locals, null, 2)%></pre>
 
